tests/snapshots/test_runner__tests__compiler__typecheck__mutually_recursive_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (n: Integer): Integer => n.bar()

let bar = (n: Integer): String => n.foo()
//                                ^^^^^^^ Error: expected String, got Integer

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/mutually_recursive_function_1.kk:1:36
  │
1 │ let foo = (n: Integer): Integer => n.bar()
  │                                    ^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
